--- a/HTML_CSS/PHP-Gallery/Php_Gallery/HTML/Register.html
+++ b/HTML_CSS/PHP-Gallery/Php_Gallery/HTML/Register.html
@@ -3,9 +3,8 @@
 <head lang="en">
     <meta charset="UTF-8">
     <title></title>
-    <link rel="stylesheet" type="text/css" href="../CSS/Register_Neon.css">
     <link rel="stylesheet" type="text/css" href="../CSS/Register.css">
-    <link rel="stylesheet" type="text/css" href="../font-awesome/css/font-awesome.min.css">
+
 </head>
 <body>
 <header>
@@ -19,7 +18,10 @@
     <input type="email" name="mail" id="mail" required="" placeholder="EMAIL">
     <input type="submit" name="submit" id="submit" required="" value="REGISTER NOW">
     </form>
-    <input type="submit" name="try_free" id="try_free" required="" value="TRY FOR FREE">
+        <form>
+            <input type="submit" name="try_free" id="try_free" required="" value="TRY FOR FREE">
+            <input type="submit" name="login" id="login" required="" value="LOGIN">
+        </form>
     </nav>
 
 </header>
