gallery + other stuffs
miro

--- a/HTML_CSS/PHP-Gallery/Php_Gallery/HTML/contacts.html
+++ b/HTML_CSS/PHP-Gallery/Php_Gallery/HTML/contacts.html
@@ -24,11 +24,10 @@
         <nav>
             <hr class="neon_lines">
             <ul class="menu">
-                <li><a href="">INFO</a></li>
-                <li><a href="">UPLOAD</a></li>
-                <li><a href="">REGISTER</a></li>
-                <li><a href="">GALLERY</a></li>
-                <li><a href="">CATEGORY</a></li>
+                <li><a href="info.html">INFO</a></li>
+                <li><a href="upload.html">UPLOAD</a></li>
+                <li><a href="register.html">REGISTER</a></li>
+                <li><a href="gallery.html">GALLERY</a></li>
             </ul>
             <hr class="neon_lines">
         </nav>
@@ -37,7 +36,7 @@
 
         <div class="person">
             <div class="role">
-                <p class="fa fa-eye"><span class="span">Front End</span></p>
+                <p class="fa fa-eye"><span class="span">Front-End</span></p>
                 <span>MIROSLAV CHALOV</span>
                 <div class="person_image">
                     <img src="../IMAGES/miro.png">
@@ -79,7 +78,7 @@
             <div class="role">
                 <p class="fa fa-cog"><span class="span">Back-End</span></p>
                 <span>VLADIMIR VELKOV</span>
-                <div class="person_image">
+                <div class="person_image ">
                     <img src="../IMAGES/vladi.png">
                 </div>
             </div>
@@ -95,13 +94,16 @@
             <p>Contacts</p>
             <ul>
                 <li class="fa fa-facebook-square"><a href="">Facebook page</a></li>
-                <li class="fa fa-github-alt"><a href=""> Git Hub</a> </li>
-                <li class="fa fa-users"><a href=""> Team Members</a> </li>
+                <li class="fa fa-github-alt"><a href="https://github.com/PHP-team-SAFFLOWER/PHP-Gallery-Contest"> Git Hub</a> </li>
+                <li class="fa fa-users"><a href="contacts.html"> Team Members</a> </li>
             </ul>
 
         </div>
     </footer>
 </div>
+
+
+
 
 </body>
 </html>
