--- a/HTML_CSS/PHP-Gallery/Php_Gallery/HTML/footer.html
+++ b/HTML_CSS/PHP-Gallery/Php_Gallery/HTML/footer.html
@@ -14,8 +14,8 @@
         <p>Contacts</p>
         <ul>
             <li class="fa fa-facebook-square"><a href="">Facebook page</a></li>
-            <li class="fa fa-github-alt"><a href=""> Git Hub</a> </li>
-            <li class="fa fa-users"><a href=""> Team Members</a> </li>
+            <li class="fa fa-github-alt"><a href="https://github.com/PHP-team-SAFFLOWER/PHP-Gallery-Contest"> Git Hub</a> </li>
+            <li class="fa fa-users"><a href="contacts.html"> Team Members</a> </li>
         </ul>
 
     </div>
