--- a/HTML_CSS/PHP-Gallery/Php_Gallery/HTML/gallery.html
+++ b/HTML_CSS/PHP-Gallery/Php_Gallery/HTML/gallery.html
@@ -4,8 +4,26 @@
     <meta charset="UTF-8">
     <title></title>
     <link rel="stylesheet" type="text/css" href="../CSS/header.css">
+    <link rel="stylesheet" type="text/css" href="../CSS/gallery.css">
     <link rel="stylesheet" type="text/css" href="../CSS/footer.css">
     <link rel="stylesheet" type="text/css" href="../font-awesome/css/font-awesome.min.css">
+    <script type="javascript" src="../js/Stars.js"></script>
+    <script type="text/javacsript" src="../js/jquery-1.11.1.min.js"></script>
+    <script>
+        function stars(radioButton) {
+            var currentStarValue = parseInt(radioButton.value);
+
+            var starRadioButtons = document.getElementsByName('star');
+            for (var i = 0, len = starRadioButtons.length; i < len; i++) {
+                var currentValue = parseInt(starRadioButtons[i].value);
+                if (currentValue <= currentStarValue) {
+                    starRadioButtons[i].style.width = '100px';
+                } else {
+                    starRadioButtons[i].style.width = '10px';
+                }
+            }
+        }
+    </script>
 </head>
 <body>
 <div class="container">
@@ -22,17 +40,38 @@
         <nav>
             <hr class="neon_lines">
             <ul class="menu">
-                <li><a href="">INFO</a></li>
-                <li><a href="">UPLOAD</a></li>
-                <li><a href="">REGISTER</a></li>
-                <li><a href="">GALLERY</a></li>
-                <li><a href="">CATEGORY</a></li>
+                <li><a href="info.html">INFO</a></li>
+                <li><a href="upload.html">UPLOAD</a></li>
+                <li><a href="register.html">REGISTER</a></li>
+                <li><a href="gallery.html">GALLERY</a></li>
             </ul>
             <hr class="neon_lines">
 
         </nav>
 
     </header>
+
+<div class="container_gallery">
+    <div class="photo">
+    <img src="../IMAGES/vladi.png">
+        <div class="rate">
+            <form onsubmit="" class="stars">
+                <input type="radio" name="star" value="1" class="radio" onclick="stars(this)"><span>1 Stars</span>>
+                <input type="radio" name="star" value="2" class="radio" onclick="stars(this)"><span>2 Stars</span>>
+                <input type="radio" name="star" value="3" class="radio" onclick="stars(this)"><span>3 Stars</span>>
+                <input type="radio" name="star" value="4" class="radio" onclick="stars(this)"><span>4 Stars</span>>
+                <input type="radio" name="star" value="5" class="radio" onclick="stars(this)"><span>5 Stars</span>>
+            </form>
+        </div>
+    </div>
+    <div class="coments">
+        <div class="text">
+
+        </div>
+
+    </div>
+
+
 </div>
 
 <hr class="neon_lines_footer">
@@ -41,13 +80,13 @@
         <p>Contacts</p>
         <ul>
             <li class="fa fa-facebook-square"><a href="">Facebook page</a></li>
-            <li class="fa fa-github-alt"><a href=""> Git Hub</a> </li>
-            <li class="fa fa-users"><a href=""> Team Members</a> </li>
+            <li class="fa fa-github-alt"><a href="https://github.com/PHP-team-SAFFLOWER/PHP-Gallery-Contest"> Git Hub</a> </li>
+            <li class="fa fa-users"><a href="contacts.html"> Team Members</a> </li>
         </ul>
 
     </div>
 </footer>
-
+</div>
 
 </body>
 </html>
