--- a/HTML_CSS/PHP-Gallery/Php_Gallery/HTML/header.html
+++ b/HTML_CSS/PHP-Gallery/Php_Gallery/HTML/header.html
@@ -22,11 +22,10 @@
     <nav>
         <hr class="neon_lines">
         <ul class="menu">
-            <li><a href="">INFO</a></li>
-            <li><a href="">UPLOAD</a></li>
-            <li><a href="">REGISTER</a></li>
-            <li><a href="">GALLERY</a></li>
-            <li><a href="">CATEGORY</a></li>
+            <li><a href="info.html">INFO</a></li>
+            <li><a href="upload.html">UPLOAD</a></li>
+            <li><a href="register.html">REGISTER</a></li>
+            <li><a href="gallery.html">GALLERY</a></li>
         </ul>
         <hr class="neon_lines">
 
