--- a/info.html
+++ b/info.html
@@ -50,7 +50,7 @@
             <ul>
                 <li class="fa fa-facebook-square"><a href="">Facebook page</a></li>
                 <li class="fa fa-github-alt"><a href="https://github.com/PHP-team-SAFFLOWER/PHP-Gallery-Contest"> Git Hub</a> </li>
-                <li class="fa fa-users"><a href="contacts.html"> Team Members</a> </li>
+                <li class="fa fa-users"><a href="contacts.php"> Team Members</a> </li>
             </ul>
 
         </div>
